adicionando configurações e injeções de dependencia

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Sqlite": "Data Source=UsersOnion.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
